<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF"
    >
     <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="47dp"
	    android:orientation="horizontal" 
	    android:background="@drawable/header"
	    android:padding="0dip">
		<Button
		    android:id="@+id/returnbutton"
		    android:layout_width="50dp"
		    android:layout_height="32dp"
		    android:layout_gravity="center_vertical"
		    android:layout_marginLeft="10dp"
		    android:gravity="right|center_vertical"
		    android:paddingRight="8dp"
		    android:text="@string/back"
		    android:textColor="@drawable/changereturntext"
		    android:textSize="14sp"
		    android:background="@drawable/changereturnbutton" >    
		</Button> 	
    </LinearLayout>
    
      <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
    <LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		<TextView 
		    android:id="@+id/blackLine"
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="#dcdcdc"/>
    	<TextView  
   			android:id="@+id/description"
   			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:text="@string/systemsound"
    		android:gravity="center_horizontal"
    		android:layout_marginTop="10dp"
    		android:textSize="30sp"
    		android:textColor="#000000"
    		/>
		<SeekBar
    		android:id="@+id/seekBar"  
    		android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:layout_marginTop="10dp"
    		android:layout_marginLeft="5dp"
    		android:layout_marginRight="5dp"
    		android:layout_marginBottom="5dp"
    		android:max="100"
    		/>
		<TextView  
   			android:id="@+id/percenttextView"
   			android:layout_width="fill_parent" 
    		android:layout_height="wrap_content" 
    		android:gravity="center_horizontal"
    		android:textSize="20sp"
    		android:textColor="#a9a9a9"
    		/>
		</LinearLayout>
<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		<TextView android:id="@id/blackLine"
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="#dcdcdc"/>
		    <TextView 
		        android:id="@+id/setLanguage"
		        android:layout_marginTop="10dp"
		        android:gravity="center_horizontal"
		        android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="5dp"
			    android:textSize="30sp"
			    android:textColor="#000000"
			    android:text="@string/setlanguage"
			    />
		    
		    <RadioGroup 
		        android:id="@+id/languageVideoGroup"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:gravity="center_horizontal"
		        android:layout_marginBottom="5dp"
		        android:orientation="horizontal">
		        <RadioButton android:id="@+id/hanyuRadioButton"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="20sp"
				    android:textColor="#000000"
		            android:text="@string/hanyu"/>
		        <RadioButton android:id="@+id/yueyuRadioButton"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="20dp"
		            android:textSize="20sp"
				    android:textColor="#000000"
		            android:text="@string/yueyu"/>
		    </RadioGroup>
	</LinearLayout>
	
<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <TextView android:id="@id/blackLine"
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="#dcdcdc"/>
		    <TextView 
		        android:id="@+id/setVoice"
		        android:layout_marginTop="10dp"
		        android:gravity="center_horizontal"
		        android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginBottom="5dp"
			    android:textSize="30sp"
			    android:textColor="#000000"
			    android:text="@string/setvoice"/>
		     <Spinner 
		        android:id="@+id/soundSpinner"
		        android:layout_width="fill_parent"
       			android:layout_height="wrap_content"
       			android:entries="@array/sound"
       			android:gravity="center_horizontal"
		        />
		    <TextView android:id="@id/blackLine"
		    android:layout_width="fill_parent"
		    android:layout_height="0.5dp"
		    android:background="#dcdcdc"/>
	</LinearLayout>
</LinearLayout>
</LinearLayout>